# ripcal

./: .gitignore  Cargo.toml  README.md
src/: iprange.rs  main.rs
